fix: pisture margin and z-index

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,7 +46,9 @@ body {
    background-origin: border-box;
    background-repeat: no-repeat;
    height: 400px;
+   margin-top: 92px;
    position: relative;
+   z-index: -1;
 }
 
 .kwadrat {
